--- a/dataframes.ipynb
+++ b/dataframes.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "dataframes.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN/yJrpAnkRv1oMz3w0jR39",
+      "authorship_tag": "ABX9TyNNgNYrQbvhGikK+DVJyxFQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,12 +34,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YzjceJZANZfd",
-        "outputId": "261438e7-26a4-4efc-edf4-517bffc05aa2"
+        "outputId": "44a873b9-6f10-4ffe-9bf5-27877ea26f06"
       },
       "source": [
         "import pandas as pd\n",
         "\n",
-        "\n",
+        "import numpy as np\n",
         "exam_data = {'name': ['Anastasia', 'Dima', 'Katherine', 'James', 'Emily', 'Michael', 'Matthew', 'Laura', 'Kevin', 'Jonas'],\n",
         "'score': [12.5, 9, 16.5, np.nan, 9, 20, 14.5, np.nan, 8, 19],\n",
         "'attempts': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
@@ -81,10 +81,10 @@
         "print(data)\n",
         "#question 7\n",
         "data.to_csv(\"my_data.csv\",index=False ,sep='/')\n",
-        "print(my_data)\n",
+        "\n",
         "\n"
       ],
-      "execution_count": 46,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,20 +161,21 @@
             "g    Matthew   14.5        1     yes\n",
             "i      Kevin    8.0        0      no\n",
             "j      Jonas   19.0        1     yes\n",
-            "k     Suresh   15.5        1     yes\n",
-            "  name/score/success/qualify\n",
-            "0       Anastasia/12.5/1/yes\n",
-            "1              Dima/9.0/0/no\n",
-            "2       Katherine/16.5/1/yes\n",
-            "3             Emily/9.0/0/no\n",
-            "4         Michael/20.0/1/yes\n",
-            "5         Matthew/14.5/1/yes\n",
-            "6             Kevin/8.0/0/no\n",
-            "7           Jonas/19.0/1/yes\n",
-            "8          Suresh/15.5/1/yes\n"
+            "k     Suresh   15.5        1     yes\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "viS-GeVKAJYk"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
