--- a/K_means_&_Hierarchical_clustering_.ipynb
+++ b/K_means_&_Hierarchical_clustering_.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "K-means & Hierarchical clustering .ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN2IoNZqP/CM31PzcVDUpFx",
+      "authorship_tag": "ABX9TyPJB920YZ29uDIKDj1FhXvk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -942,7 +942,6 @@
         "pca_dataframe = pd.DataFrame(data = principal_comp,columns = ['comp_1','comp_2'])\n",
         "\n",
         "\n",
-        "\n",
         "plt.figure(figsize=(10,10))\n",
         "sns.scatterplot(data=pca_dataframe, x='comp_1', y='comp_2', palette=\"viridis\")\n",
         "plt.title('K_means')\n"
@@ -950,13 +949,33 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 637
+          "height": 880
         },
         "id": "gEX1CSMYRFQ1",
-        "outputId": "02131cd3-68f8-41d6-ce7c-11951c0123b3"
+        "outputId": "951f495e-9c23-4c82-e70e-2eccb9ab90ca"
       },
-      "execution_count": 96,
+      "execution_count": 97,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "           comp_1       comp_2\n",
+            "0    -4326.383956   921.566884\n",
+            "1     4118.916676 -2432.846347\n",
+            "2     1497.907660 -1997.578692\n",
+            "3     1394.548556 -1488.743450\n",
+            "4    -3743.351874   757.342659\n",
+            "...           ...          ...\n",
+            "8945 -4208.357938  1122.443274\n",
+            "8946 -4123.924001   951.683803\n",
+            "8947 -4379.444202   911.504566\n",
+            "8948 -4791.117744  1032.540944\n",
+            "8949 -3623.702749  1555.134769\n",
+            "\n",
+            "[8950 rows x 2 columns]\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -965,7 +984,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 96
+          "execution_count": 97
         },
         {
           "output_type": "display_data",
